# SensorCalibrationLib

./: .gitignore  README.md  main.py  pyproject.toml
param_files/: api_test_0.json  api_test_1.json  api_test_import_three_key.json  api_test_import_wrong_keys.json  linear0.json  linear_exp0.json  linear_test_import.json  main.json  quad_test_import.json  quad_test_import_four_key.json
src/sensorcalibrationlib/: __init__.py  calib.py  methods.py  types.py
test/: test_api.py  test_linear.py  test_quad.py  test_regression.py
