[project]
name = "sensorcalibrationlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kpetrakis", email = "kostispetrak@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
